--- a/web/index.html
+++ b/web/index.html
@@ -368,7 +368,7 @@
         </div>
     </div>
 
-    <script src="app.js" defer></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
 
