Implement asynchronous script execution tracking. Enhance execution log updates to support 'running' status for async commands, and introduce a background watcher to finalize logs with accurate duration upon completion. Update related functions to handle new metadata for process tracking.

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
                     <img src="logo.png" alt="Wispr Logo" class="header-logo">
                     <div class="header-text">
                         <h1>Wispr Action</h1>
-                        <p class="subtitle">Voice Command Manager</p>
+                        <p class="subtitle">Turn raw speech into structured commands</p>
                     </div>
                 </div>
             </div>
